using System;

namespace Assets.Scripts.Logic
{
    public class OsuFactory
    {
         public  AbstractOsuSequence CreateSequence()
          {
              throw new NotImplementedException();
          }

          public IOsuEntity CreateEntity()
          {
              throw new NotImplementedException();

          }
    }
}